--- a/src/main/resources/templates/cookbookDetails.html
+++ b/src/main/resources/templates/cookbookDetails.html
@@ -26,10 +26,14 @@
 
         <tr th:each="recipe : ${recipeDTOList}">
             <td class="align-middle">
-                <a  class="text-decoration-none" th:href="@{/recipes/{urlId}(urlId=${recipe.urlId})}" th:text="${recipe.recipeName}"></a>
+                <a class="text-decoration-none" th:href="@{/recipes/{urlId}(urlId=${recipe.urlId})}"
+                   th:text="${recipe.recipeName}"></a>
             </td>
             <td data-th-align="right">
-                <a class="btn btn-primary confirmDelete" th:href="@{/cookbook/remove/{urlId}/{recipeUrlId}(urlId = ${cookbookDTO.urlId}, recipeUrlId = ${recipe.urlId})}" th:if="${ownRecipe}"><i class="fas fa-trash"></i></a>
+                <a class="btn btn-primary confirmDelete"
+                   th:href="@{/cookbook/remove/{urlId}/{recipeUrlId}(urlId =
+                   ${cookbookDTO.urlId}, recipeUrlId = ${recipe.urlId})}"
+                   th:if="${ownRecipe}"><i class="fas fa-trash"></i></a>
             </td>
         </tr>
 
