--- a/src/main/resources/templates/myCookbook.html
+++ b/src/main/resources/templates/myCookbook.html
@@ -18,11 +18,15 @@
 
         <tr th:each="recipe : ${recipeDTOList}">
             <td class="align-middle">
-                <a class="text-decoration-none" th:href="@{/recipes/{urlId}(urlId=${recipe.urlId})}" th:text="${recipe.recipeName}"></a>
+                <a class="text-decoration-none" th:href="@{/recipes/{urlId}(urlId=${recipe.urlId})}"
+                   th:text="${recipe.recipeName}"></a>
             </td>
             <td data-th-align="right">
-                <a type="button" class="btn btn-primary" th:href="@{/recipe/update/{urlId}(urlId=${recipe.urlId})}" th:if="${ownRecipe}"><i class="fas fa-pencil-alt"></i></a>
-                <a type="button" class="btn btn-primary confirmDelete" th:href="@{/recipe/delete/{urlId}(urlId=${recipe.urlId})}" th:if="${ownRecipe}"><i class="fas fa-trash"></i></a>
+                <a type="button" class="btn btn-primary" th:href="@{/recipe/update/{urlId}(urlId=${recipe.urlId})}"
+                   th:if="${ownRecipe}"><i class="fas fa-pencil-alt"></i></a>
+                <a type="button" class="btn btn-primary confirmDelete"
+                   th:href="@{/recipe/delete/{urlId}(urlId=${recipe.urlId})}" th:if="${ownRecipe}"><i
+                        class="fas fa-trash"></i></a>
             </td>
         </tr>
     </table>
