--- a/src/main/resources/templates/myKitchen.html
+++ b/src/main/resources/templates/myKitchen.html
@@ -19,17 +19,23 @@
             <table class="table">
                 <tr class="row-even-spacing">
                     <td class="align-middle">
-                        <a class="text-decoration-none" th:href="@{/cookbook/myCookbook/{username}(username=${user.username})}">My recipes</a>
+                        <a class="text-decoration-none"
+                           th:href="@{/cookbook/myCookbook/{username}(username=${user.username})}">My recipes</a>
                     </td>
                     <td></td>
                 </tr>
                 <tr class="row-even-spacing" th:each="cookbook : ${cookbookList}">
                     <td class="align-middle">
-                        <a class="text-decoration-none" th:href="@{/cookbook/{urlId}(urlId = ${cookbook.urlId})}" th:text="${cookbook.cookbookName}"></a>
+                        <a class="text-decoration-none" th:href="@{/cookbook/{urlId}(urlId = ${cookbook.urlId})}"
+                           th:text="${cookbook.cookbookName}"></a>
                     </td>
                     <td data-th-align="right">
-                        <a type="button" class="btn btn-primary" th:href="@{/cookbook/update/{urlId}(urlId = ${cookbook.urlId})}"><i class="fas fa-pencil-alt"></i></a>
-                        <a type="button" class="btn btn-primary confirmDelete" th:href="@{/cookbook/delete/{urlId}(urlId = ${cookbook.urlId})}"><i class="fas fa-trash"></i></a>
+                        <a type="button" class="btn btn-primary"
+                           th:href="@{/cookbook/update/{urlId}(urlId = ${cookbook.urlId})}"><i
+                                class="fas fa-pencil-alt"></i></a>
+                        <a type="button" class="btn btn-primary confirmDelete"
+                           th:href="@{/cookbook/delete/{urlId}(urlId = ${cookbook.urlId})}"><i class="fas fa-trash"></i>
+                        </a>
                     </td>
                 </tr>
             </table>
