--- a/src/main/resources/templates/userForm.html
+++ b/src/main/resources/templates/userForm.html
@@ -13,11 +13,13 @@
             <div class="col-6">
                 <div class="form-group">
                     <label for="username">Username:</label>
-                    <input type="text" id="username" th:field="*{username}" class="form-control form-control-with" required>
+                    <input type="text" id="username" th:field="*{username}" class="form-control form-control-with"
+                           required>
                 </div>
                 <div class="form-group">
                     <label for="password">Password:</label>
-                    <input type="password" id="password" th:field="*{password}" class="form-control form-control-with" required>
+                    <input type="password" id="password" th:field="*{password}" class="form-control form-control-with"
+                           required>
                 </div>
                 <div>
                     <input type="submit" value="Register" class="btn btn-primary"/>
